refactor: 파일명 및 변수명 comment → comments 변경, detail 하위 컴포넌트 및 훅 이름에 Detail 접두어 추가
백엔드:
1. 상세 코멘트
- 파일명 및 변수명 comment → comments 변경

프론트엔드:
1. 상세 공통
- detail 하위 컴포넌트 및 훅 이름에 Detail 접두어 추가
- contentInformation, creditsInformation 폴더에 각 컴포넌트 및 훅을 카테고리 별로 분리
2. 상세 코멘트
- 파일명 및 변수명 comment → comments 변경
